--- a/Sass/layout/_contactpage.scss
+++ b/Sass/layout/_contactpage.scss
@@ -1,58 +1,232 @@
+$borderSize: 0.2em;
+$paperAspect: 1.414;
+
 .CIContainter {
-    width: 60vw;
-    height: 43%;
-    display: flex;
-    flex-direction: column;
-    background-color: $CalmBlue;
-    margin-left: 20vw;
-    margin-top: 15vh;
+  width: 60vw;
+  height: 43%;
+  display: flex;
+  flex-direction: column;
+  background-color: $CalmBlue;
+  margin-left: 20vw;
+  margin-top: 15vh;
+  overflow: visible;
 }
 
-.CIHeader {
-    color: white;
-    height: 30px;
-    text-align: center;
-    font-size: x-large;
-    text-decoration: underline;
-    font-weight: bold;
-}
-
-.CI-Image {
-    width: 100%;
-}
-
-.linkedin {
-    width: 50px;
-    margin-left: 48vw;
-}
-
-.linkedinText{
-    margin-left: 46.8vw;
-    text-decoration: none;
-    color: white;
-    font-size: large;
+.contactContent {
+  margin-top: calc(75px + 3rem);
+  width: 70vw;
+  height: 40vw;
+  margin-left: 15vw;
+  display: flex;
+  flex-direction: row;
+  overflow: visible;
 }
 
 .CV {
-    margin-left: 30vw;
-    width: 40vw;
+  width: 30vw;
+  height: calc(30vw * var(#{$paperAspect}));
+}
+
+form {
+  --border-Size: 0.1em;
+  width: 30vw;
+  height: 30vw;
+  border-radius: $cornerRadius;
+  //background-color: $CalmBlue;
+  display: flex;
+  flex-direction: column;
+  place-self: center;
+  justify-content: center;
+  gap: 1vh 0;
+  border: $borderSize double $CalmBlue;
+  font-size: large;
+
+  background-image: url("/Images/stars.jpg");
+  background-position: center;
+  background-size: cover;
+  
+  label{
+    --label-width: 60%;
+    color: white;
+    text-align: right;
+    width: var(--label-width);
+    margin-left: calc(50% - (var(--label-width) / 2));
+    text-wrap: nowrap;
+  }
+
+  input, textarea{
+    color: white;
+    background-color: transparent;
+    border: $borderSize solid $CalmBlue;
+    height: 2rem;
+    width: 15rem;
+  }
+
+  ::placeholder{
+    color: white;
+    opacity: 0.7;
+  }
+
+  input, textarea, button{
+    position: relative;
+    border-radius: $cornerRadius;
+  }
+  
+  button{
+    transition: all $animTime;
+    width: 15%;
+    margin-left: calc(50% - 7.5%);
+    border: $borderSize solid $CalmBlue;
+    color: white;
+    background-color: black;
+    
+    &:hover{
+      background-color: $CalmBlue;
+      color: black;
+      border: $borderSize solid white; 
+      cursor: pointer;
+    }
+  }
+}
+
+.divider {
+height: 80vh;  width:10vw;
+}
+
+@media screen and (max-width: 1920px){
+  form{
+    label{
+     font-size: medium;
+        --label-width: 90%;
+        color: white;
+        text-align: right;
+        width: var(--label-width);
+        margin-left: calc((var(--label-width) / 2) - 50%);
+    }
+  }
+}
+
+@media screen and (max-width: 1440px){
+ form{
+   align-content: center;
+   label{
+     text-align: center;
+     --label-width: 50%;
+     text-wrap: stable;
+     width: var(--label-width);
+     margin-left: 0;
+   }
+ } 
+}
+
+@media screen and (max-width: 1280px){
+  form{
+    align-content: center;
+    label{
+      text-align: center;
+      --label-width: 80%;
+      text-wrap: stable;
+      width: var(--label-width);
+      margin-left: 11%;
+    }
+  } 
+}
+
+@media screen and (max-width: 1279px){
+  .contactContent{
+    flex-direction: column-reverse;
+    text-wrap: wrap;
+    height: auto;
+    form{
+      gap: 1vh 0;
+      flex-shrink: 0;
+      width: 70%;
+      height: 40vh;
+      label{
+        --label-width: 90%;
+        font-size: medium;
+        color: white;
+        text-align: right;
+        width: var(--label-width);
+        margin-left: calc(26% - (var(--label-width) / 2));
+      }
+    }
+  }
+
+  .divider{
+    width: 0;
+    height: $gapSize;
+  }
+
+  .CV {
+    width: 50vw;
     height: 100vh;
+    place-self: center;
+    flex-shrink: 0;
+  }
+  
+}
+
+@media screen and (max-width: 990px){
+ .contactContent{
+
+   form{
+     label{
+       --label-width: 90%;
+       width: var(--label-width);
+       margin-left: 0;
+     }
+   }
+ }
+}
+
+@media screen and (max-width: 800px){
+  .contactContent{
+    form{
+      label{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        --label-width: auto;
+        width: var(--label-width);
+        align-self: center;
+      }
+    }
+  }
+  
+  .CV{
+    height: 85vh;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .CIContainter,.CV{
-        width: 80vw;
-        margin-left: 10vw;
+.contactContent{
+  form{
+    width: 100%;
+    label{
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      --label-width: auto;
+      width: var(--label-width);
+      align-self: center;
     }
+  }
+}
+  
+  .CIContainter,.CV{
+    width: 80vw;
+    place-content: center;
+  }
 
-    .CV{
-        height: 90vh;
-    }
-    
+  .CV{
+    height: 90vh;
+  }
+
 }
 
 @media screen and (max-width: 500px) {
- .CV{
+  .CV{
     height: 70vh;
- }   
+  }   
 }
